Update corrections stock catalysts repository

--- a/polls/Pages/base_generic.html
+++ b/polls/Pages/base_generic.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  {% block title %}<title>Local Library</title>{% endblock %}
+  <!--{% block title %}<title>Local Library</title>{% endblock %} -->
   <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css' %}">
   <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
 
@@ -50,32 +50,36 @@
     <footer>
         <div class="footer-top">
             <div class="container">
+              <br>
                 <div class="row">
                     <div class="col-md-4 col-lg-4 footer-about wow fadeInUp animated" style="visibility: visible; animation-name: fadeInUp;">
                         <img class="logo-footer" src="assets/img/logo.png" alt="logo-footer" data-at2x="assets/img/logo.png" width="74" height="84">
+                        <p><b>© Catalyst Repository 2021</b></p>
                         <p>
-                            We are a young company always looking for new and creative ideas to help you with our products in your everyday work.
+                            This platform was created to help you find the best stocks to trade based on recent news.
                         </p>
                     </div>
                     <div class="col-md-4 col-lg-4 offset-lg-1 footer-contact wow fadeInDown animated" style="visibility: visible; animation-name: fadeInDown;">
                         <h3>Contact</h3>
-                        <p><i class="fas fa-map-marker-alt"></i> Via Rossini 10, 10136 Turin Italy</p>
-                        <p><i class="fas fa-phone"></i> Phone: (0039) 333 12 68 347</p>
-                        <p><i class="fas fa-envelope"></i> Email: <a href="mailto:hello@domain.com">hello@domain.com</a></p>
+                        <p><i class="fas fa-envelope"></i> Email: 
+                          <!--<a href="mailto:hello@domain.com">hello@domain.com</a> -->
+                        </p>
                         
                     </div>
                     <div class="col-md-4 col-lg-3 footer-social wow fadeInUp animated" style="visibility: visible; animation-name: fadeInUp;">
-                        <h3>Follow us</h3>
+                       <!--<h3>Follow us</h3>
                         <p>
                             <a href="#">aa<i class="fab fa-facebook"></i></a> 
                         </p>
+                        --> 
                     </div>
                 </div>
                 <div class="row" style="text-align: center;">
                     <p>
-                    The information in this website is general information only. Any advice is general advice only. 
+                    
                     </p>
                 </div>
+            <br>
             </div>
         </div>
     </footer>
