--- a/polls/Pages/nasdaq_earnigs.html
+++ b/polls/Pages/nasdaq_earnigs.html
@@ -1,146 +1,31 @@
 {% extends "base_generic.html" %}
 {% load static %}
+{% load tz %}
 
 {% block content %}
 
-<link rel="stylesheet" type="text/css" href="{% static 'css/table.css' %}">
-  <h1>NASDAQ Earnigs Reports</h1>
-  <p>List of stocks that have earnings releases today according to the NASDAQ earnings calendar. The list is enriched with the estimated release time, the stock price data for normal and extended hours and an earnings related headline. </p>
+<head>
+  <title>Catalyst Repository | Earnigs Reports</title>
+  <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
 
-  <a class="nav-link" href="{% url 'stock_details_view' %}">teste detail</a>
+</head>
+<body>
 
-  <div class="container-table100">
-    <div class="wrap-table100">
-    <div class="table100">
-    <table>
-    <thead>
-        <tr class="table100-head">
-        <th class="column1">Ticker</th>
-        <th class="column2">Name</th>
-        <th class="column3">Last Price</th>
-        <th class="column4">Volume</th>
-        <th class="column5">Last Update</th>
-        <th class="column6">Recent Headlines</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-        <td class="column1">LIXT</td>
-        <td class="column2">Lixte Biotech Holdings</td>
-        <td class="column3">$6.91</td>
-        <td class="column4">23,171,733</td>
-        <td class="column5">2021-02-26 01:22</td>
-        <td class="column6"></td>
-    </tr>
-    <tr>
-        <td class="column1">AFI</td>
-        <td class="column2">Armstrong Flooring</td>
-        <td class="column3">$5.19</td>
-        <td class="column4">1,879,305</td>
-        <td class="column5">2021-02-26 01:22</td>
-        <td class="column6">Armstrong Flooring pops after hours on offloading California property [2/25/2021 4:47 PM]
-
-            Armstrong Flooring Signs Definitive Agreement to Sell South Gate, California Property for $76.7 Million [Feb-25-21 04:38PM]</td>
-    </tr>
-    <tr>
-        <td class="column1">LIXT</td>
-        <td class="column2">Lixte Biotech Holdings</td>
-        <td class="column3">$3216.91</td>
-        <td class="column4">23,171,733</td>
-        <td class="column5">2021-02-26 01:22</td>
-        <td class="column6"></td>
-    </tr>
-    <tr>
-        <td class="column1">LIXT</td>
-        <td class="column2">Lixte Biotech Holdings</td>
-        <td class="column3">6.91</td>
-        <td class="column4">23,171,733</td>
-        <td class="column5">2021-02-26 01:22</td>
-        <td class="column6"></td>
-    </tr>
-    <tr>
-        <td class="column1">LIXT</td>
-        <td class="column2">Lixte Biotech Holdings</td>
-        <td class="column3">6.91</td>
-        <td class="column4">23,171,733</td>
-        <td class="column5">2021-02-26 01:22</td>
-        <td class="column6"></td>
-    </tr>
-    <tr>
-        <td class="column1">LIXT</td>
-        <td class="column2">Lixte Biotech Holdings</td>
-        <td class="column3">6.91</td>
-        <td class="column4">23,171,733</td>
-        <td class="column5">2021-02-26 01:22</td>
-        <td class="column6"></td>
-    </tr>
-    <tr>
-        <td class="column1">LIXT</td>
-        <td class="column2">Lixte Biotech Holdings</td>
-        <td class="column3">6.91</td>
-        <td class="column4">23,171,733</td>
-        <td class="column5">2021-02-26 01:22</td>
-        <td class="column6"></td>
-    </tr>
-    <tr>
-        <td class="column1">LIXT</td>
-        <td class="column2">Lixte Biotech Holdings</td>
-        <td class="column3">6.91</td>
-        <td class="column4">23,171,733</td>
-        <td class="column5">2021-02-26 01:22</td>
-        <td class="column6"></td>
-    </tr>
-    <tr>
-        <td class="column1">LIXT</td>
-        <td class="column2">Lixte Biotech Holdings</td>
-        <td class="column3">6.91</td>
-        <td class="column4">23,171,733</td>
-        <td class="column5">2021-02-26 01:22</td>
-        <td class="column6"></td>
-    </tr>
-    <tr>
-        <td class="column1">LIXT</td>
-        <td class="column2">Lixte Biotech Holdings</td>
-        <td class="column3">6.91</td>
-        <td class="column4">23,171,733</td>
-        <td class="column5">2021-02-26 01:22</td>
-        <td class="column6"></td>
-    </tr>
-    <tr>
-        <td class="column1">LIXT</td>
-        <td class="column2">Lixte Biotech Holdings</td>
-        <td class="column3">6.91</td>
-        <td class="column4">23,171,733</td>
-        <td class="column5">2021-02-26 01:22</td>
-        <td class="column6"></td>
-    </tr>
-    <tr>
-        <td class="column1">LIXT</td>
-        <td class="column2">Lixte Biotech Holdings</td>
-        <td class="column3">6.91</td>
-        <td class="column4">23,171,733</td>
-        <td class="column5">2021-02-26 01:22</td>
-        <td class="column6"></td>
-    </tr>
-    <tr>
-        <td class="column1">LIXT</td>
-        <td class="column2">Lixte Biotech Holdings</td>
-        <td class="column3">6.91</td>
-        <td class="column4">23,171,733</td>
-        <td class="column5">2021-02-26 01:22</td>
-        <td class="column6"></td>
-    </tr>
-    <tr>
-        <td class="column1">LIXT</td>
-        <td class="column2">Lixte Biotech Holdings</td>
-        <td class="column3">6.91</td>
-        <td class="column4">23,171,733</td>
-        <td class="column5">2021-02-26 01:22</td>
-        <td class="column6"></td>
-    </tr>
-    </tbody>
-    </table>
-    </div>
-    </div>
-    </div>
+<br>
+    <span >
+    NYSE Earnings Calendars
+The following sites list which stocks (that are in general listed on the NYSE stock exchange) will release earnings on a certain date.
+Also try our Earnings screener to see which stocks are releasing an earnings report today.
+</span>
+<dl>
+    Nasdaq Earnings Calendar
+    <dd><a href="https://www.nasdaq.com/market-activity/earnings" class="btn btn-outline-dark" role="button" target="_blank">Nasdaq</a></dd>
+    Zacks Earnings Calendar
+    <dd><a href="https://www.zacks.com/earnings/earnings-calendar" class="btn btn-outline-dark" role="button" target="_blank">Zacks</a></dd>
+    <dd><a href="https://www.earningswhispers.com/calendar" class="btn btn-outline-dark" role="button" target="_blank">EarningsWhispers</a></dd>
+    <dd><a href="https://stocktwits.com/discover/earnings-calendar" class="btn btn-outline-dark" role="button" target="_blank">StockTwits</a></dd>
+    <dd><a href="https://marketchameleon.com/Calendar/Earnings" class="btn btn-outline-dark" role="button" target="_blank">MarketChameleon</a></dd>
+</dl>
+  
+</body>
 {% endblock %}
