--- a/polls/Pages/premarket.html
+++ b/polls/Pages/premarket.html
@@ -42,35 +42,31 @@
 <body>
   <section class="page-section">
     <div class="row mt-4 border-1">
-      <div class="col-md-1 col-lg-1">
-        <img src="{% static 'images/biologo.png' %}" alt="logo-bio"  width="74" height="84">
-      </div>
+      
       <div class="col-md-4 col-lg-4 footer-about wow fadeInUp animated" style="visibility: visible; animation-name: fadeInUp;">
-        <h2 class="title-color">Biotech Press Releases</h2>
+        <h2 class="title-color">Top Gaining and Top Lossing Stocks</h2>
         <br>
         <p>
-          Breaking news and real-time stock market updates of every NASDAQ/NYSE company. Read the latest stock market news and headlines.
+          Overview of stocks whose prices move the most premarket today.
+          Here you can find premarket quotes for relevant stock market. Prices are indicative and may differ from the actual market price.
         </p>
+      </div>
+      <div class="col-md-1 col-lg-1">
+        <img src="{% static 'images/gainandloss.png' %}" alt="logo-bio"  width="400" height="250">
       </div>
     </div>
     <br>
     <div class="row border-1" >
       <b>NOTE:</b> Only NASDAQ and NYSE stocks companies presentations and/or earnings releases are shown.
     </div>
-    <br>
     <div class="row border-1" >
-      <p>
-        Use our tools on your road to profit in the stock market through events/catalysts that we share with you.
-      </p>
-    </div>
-    <div class="row border-1" >
-      Headlines data could be delayed 2-5 minutes.
+      Data could be delayed 2-4 minutes.
     </div>
   </section>
-  
+  <br>
   <section class="page-section">
 
-    Top Gaining Stocks
+    <h3 class="mb-4" style="color: rgb(61, 61, 61);">Top Gaining Stocks</h3>
 
     <!-- <div class="container-table100"> -->
       <div class="wrap-table100" >
@@ -115,7 +111,8 @@
 
   <section class="page-section">
 
-    Top Losing Stocks
+    <h3 class="mb-4" style="color: rgb(61, 61, 61);">Top Losing Stocks</h3>
+    
 
     <!-- <div class="container-table100"> -->
       <div class="wrap-table100" >
@@ -161,7 +158,7 @@
     <br>
   <section class="page-section">
     <div class="row border-1">
-      Stock information is delayed around 1-3 minutes
+      Stock information is delayed around 2-4 minutes
     </div>
   </section>
 
