--- a/polls/Pages/contactus.html
+++ b/polls/Pages/contactus.html
@@ -6,7 +6,7 @@
 {% block content %}
 
 <section class="hero py-6 py-lg-7 text-white dark-overlay pt-5">
-	<img src="https://d19m59y37dris4.cloudfront.net/directory/1-1/img/photo/photo-1522143049013-2519756a52d4.jpg" alt="How can we help you today?" >
+	<img src="https://d19m59y37dris4.cloudfront.net/directory/1-1/img/photo/photo-1522143049013-2519756a52d4.jpg" alt="How can we help you today?" style="width:100%; margin-top: -50px; height: 250px; object-fit: cover;" >
       <div class="container overlay-content">
         <!-- Breadcrumbs -->
         <br>
